# compass

./: .gitattributes  .gitignore  .npmignore  LICENSE  README.md  RELEASE.md  package.json
cli/: Cargo.toml  build.rs
cli/src/: helpers.rs  main.rs
cli/src/cmd/: context.rs  dag.rs  gdrive.rs  git.rs  hook.rs  index.rs  manifest.rs  memory.rs  migrate.rs  mod.rs  progress.rs  project.rs  session.rs  sheet.rs  state.rs  version.rs
cli/src/cmd/validate/: mod.rs  prd.rs
cli/tests/: e2e_check_validates_prd.rs  e2e_common.rs  e2e_cross_cwd.rs  e2e_fallback.rs  e2e_migrate_v05.rs  e2e_no_shell_remains.rs  e2e_run_missing_context.rs  e2e_smart_init.rs  e2e_v1_smoke.rs  e2e_wrapper_compliance.rs  project_gate_test.rs
cli/tests/fixtures/: plan_empty_pointers.json  plan_missing_pointers.json  plan_too_many_pointers.json  plan_v1_valid.json  prd_bad_flow_bullet.md  prd_bad_flow_prose.md  prd_good_flow.md  prd_xref_dangling.md  prd_xref_valid.md
cli/tests/fixtures/projects/proj_a/.compass/.state/: config.json
cli/tests/fixtures/projects/proj_b/.compass/.state/: config.json
cli/tests/fixtures/projects/proj_c/.compass/.state/: config.json
cli/tests/fixtures/registry/: all_dead.json  corrupt.json  empty.json  last_active_dead.json  multi_alive.json  one_alive.json
cli/tests/fixtures/v0_project/.compass/.state/: config.json
cli/tests/fixtures/v0_project/.compass/.state/sessions/onboarding-redesign/: plan.json
cli/tests/fixtures/v0_project/.compass/.state/sessions/sample-feature/: context.json  plan.json
core/: manifest.json
scripts/: bump-version.sh
(+108 files in other folders)
